--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -40,9 +40,33 @@ textarea {
 .three {
   clear: left; }
 
+label[for='MatchesPlayer1Score'],
+.one label, .three label {
+  color: #a50000; }
+
+label[for='MatchesPlayer2Score'],
+.two label, .four label {
+  color: #004ea3; }
+
 div.content {
   padding: 15px;
   background-color: #eeeeee;
   color: #333333;
   border: 1px solid #a2a2a2;
   border-radius: 4px; }
+
+table.result-table {
+  margin: 10px;
+  border: 1px solid #a2a2a2;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  background-color: #fff; }
+  table.result-table td {
+    font-size: 16px;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #a2a2a2; }
+  table.result-table tr.scores td {
+    padding: 20px 10px;
+    font-size: 20px;
+    font-weight: bold; }
