Reduce H1 font-size to fit portrait phone

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -34,6 +34,9 @@ body{
     color: $fg;
     font-family: Telex, Arial, sans-serif;
 }
+h1{
+    font-size: 30px;
+}
 
 legend{
     color: $contentText;
