--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -11,6 +11,9 @@ body {
   color: white;
   font-family: Telex, Arial, sans-serif; }
 
+h1 {
+  font-size: 30px; }
+
 legend {
   color: #333333; }
 
