--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,98 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Telex);
-/*
-Document   : style
-Created on : Dec 19, 2012, 3:48:40 PM
-Author     : david
-Description:
-    Purpose of the stylesheet follows.
-*/
-body {
-  background-color: #2e3f73;
-  color: white;
-  font-family: Telex, Arial, sans-serif; }
-
-a.logo {
-  color: white;
-  text-decoration: none; }
-  a.logo h1 {
-    padding-left: 40px;
-    background: url(../img/table-tennis.png) 0 4px no-repeat;
-    font-size: 30px; }
-
-legend {
-  color: #333333; }
-
-.scores {
-  clear: both; }
-  .scores .input {
-    float: left; }
-
-#score0, #score1 {
-  width: 30px; }
-
-div.input.required label:after {
-  content: "*"; }
-div.input.error {
-  padding: 10px;
-  color: #B94A48;
-  background-color: #F2DEDE;
-  border: 1px solid #EED3D7;
-  border-radius: 4px; }
-
-.one, .two, .three, .four {
-  float: left; }
-
-.three {
-  clear: left; }
-
-label[for='MatchesPlayer1Score'],
-.one label, .three label {
-  color: #a50000; }
-
-label[for='MatchesPlayer2Score'],
-.two label, .four label {
-  color: #004ea3; }
-
-div.content {
-  padding: 5px;
-  background-color: #eeeeee;
-  color: #333333;
-  border: 1px solid #a2a2a2;
-  border-radius: 4px; }
-
-#scorecard {
-  /*width: 520px;*/
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  background: #fefcea;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #fefcea 0%, #efdf77 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefcea), color-stop(100%, #efdf77));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #fefcea 0%, #efdf77 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #fefcea 0%, #efdf77 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #fefcea 0%, #efdf77 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #fefcea 0%, #efdf77 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefcea', endColorstr='#efdf77',GradientType=0 );
-  /* IE6-9 */ }
-  #scorecard table.result-table {
-    /*width: 500px;*/
-    margin: 10px; }
-    #scorecard table.result-table td {
-      font-size: 16px;
-      padding: 10px;
-      text-align: center; }
-    #scorecard table.result-table tr.scores td {
-      padding: 20px 10px;
-      font-size: 26px;
-      font-weight: bold; }
-
-.buttons a {
-  float: left;
-  clear: left;
-  margin: 10px auto; }
+@import url(http://fonts.googleapis.com/css?family=Telex);body{background-color:#2e3f73;color:#fff;font-family:Telex, Arial, sans-serif}a.logo{color:#fff;text-decoration:none}a.logo h1{padding-left:40px;background:url(../img/table-tennis.png) 0 4px no-repeat;font-size:30px}legend{color:#333}.scores{clear:both}.scores .input{float:left}#score0,#score1{width:30px}div.input.required label:after{content:"*"}div.input.error{padding:10px;color:#B94A48;background-color:#F2DEDE;border:1px solid #EED3D7;border-radius:4px}.one,.two,.three,.four,.team1,.team2{float:left;padding:5px;border-radius:4px}.three{clear:left}div.input.one,div.input.three,div.input.team1{background-color:#ff5959;margin-bottom:5px}label[for='MatchesPlayer1Score'],.one label,.three label{color:#a50000}div.input.two,div.input.four,div.input.team2{background-color:#57a7ff}label[for='MatchesPlayer2Score'],.two label,.four label{color:#004ea3}div.content{padding:5px;background-color:#eee;color:#333;border:1px solid #a2a2a2;border-radius:4px}#scorecard{border-radius:5px;box-shadow:0 0 5px rgba(0,0,0,0.3);background:#fefcea;background:-moz-linear-gradient(top, #fefcea 0%, #efdf77 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefcea), color-stop(100%, #efdf77));background:-webkit-linear-gradient(top, #fefcea 0%, #efdf77 100%);background:-o-linear-gradient(top, #fefcea 0%, #efdf77 100%);background:-ms-linear-gradient(top, #fefcea 0%, #efdf77 100%);background:linear-gradient(to bottom, #fefcea 0%, #efdf77 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefcea', endColorstr='#efdf77',GradientType=0 )}#scorecard table.result-table{margin:10px}#scorecard table.result-table td{font-size:16px;padding:10px;text-align:center}#scorecard table.result-table tr.scores td{padding:20px 10px;font-size:26px;font-weight:bold}.buttons a{float:left;clear:left;margin:10px auto}
