--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -71,16 +71,25 @@ div.input{
     }
 }
 
-.one, .two, .three, .four{
+.one, .two, .three, .four, .team1, .team2{
     float: left;
+    padding: 5px;
+    border-radius: 4px;
 }
 .three{
     clear: left;
 }
 
+div.input.one, div.input.three, div.input.team1{
+    background-color: lighten($teamRed,35%);
+    margin-bottom: 5px;
+}
 label[for='MatchesPlayer1Score'],
 .one label, .three label{
     color: $teamRed;
+}
+div.input.two, div.input.four, div.input.team2{
+    background-color: lighten($teamBlue,35%);
 }
 label[for='MatchesPlayer2Score'],
 .two label, .four label{
