--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -132,3 +132,10 @@ div.content{
         margin: 10px auto;
     }
 }
+
+.undefeated, .winless{
+    display: block;
+    margin: 5px 0;
+    font-size: 24px;
+    font-weight: bold;
+}
