Added rankings to the navigation. Made the table sortable.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -139,3 +139,18 @@ div.content{
     font-size: 24px;
     font-weight: bold;
 }
+
+#rankings{
+    th{
+        cursor: pointer;
+        &.sorting-asc, &.sorting-desc{
+            background-color: #ccc;
+        }
+        &.sorting-asc:after{
+            content: ' v';
+        }
+        &.sorting-desc:after{
+            content: ' ^';
+        }
+    }
+}
