Relates to #12. Updated the styles for the comparison page.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -159,3 +159,12 @@ td.result{
         color: #fff;
     }
 }
+div.player1, div.player2{
+    float: left;
+}
+div.player1.well, div.player2.well{
+    width: 180px;
+}
+div.player1.well{
+    margin-right: 22px;
+}
