Made player names in compare link to the player profile. Also centred the compare stats.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -165,6 +165,9 @@ div.player1, div.player2{
     float: left;
 }
 table.comparison{
+    td{
+        text-align: center;
+    }
     h4{
         margin: 0;
     }
