Resolves #13. Added Linkable plugin. Changed Departments::index() to load rankings. Created new department rankings method. Updated navigation to be clearer. Moved stupid table js from in views to the layout and common.js.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -140,7 +140,7 @@ div.content{
     font-weight: bold;
 }
 
-#rankings{
+#rankings, #department-ranks{
     th{
         cursor: pointer;
         &.sorting-asc, &.sorting-desc{
