Added gravatars to the players.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -172,3 +172,9 @@ table.comparison{
         margin: 0;
     }
 }
+.gravatar{
+    margin-right: 10px;
+}
+td .gravatar{
+    margin-right: 5px;
+}
