Mid way through #9

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -8,6 +8,7 @@ Description:
 
 @import url(http://fonts.googleapis.com/css?family=Telex);
 
+/** Palette **/
 $ttBlue: #2E3F73;
 $ttGreen: #088B29;
 $fg: #fff;
@@ -18,6 +19,7 @@ $contentText: #333;
 $teamRed: #a50000;
 $teamBlue: #004ea3;
 
+/** Mixins **/
 @mixin cardBg{
     background: #fefcea; /* Old browsers */
     background: -moz-linear-gradient(top,  #fefcea 0%, #efdf77 100%); /* FF3.6+ */
@@ -29,6 +31,7 @@ $teamBlue: #004ea3;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#efdf77',GradientType=0 ); /* IE6-9 */
 }
 
+/** Standard styles **/
 body{
     background-color: $ttBlue;
     color: $fg;
@@ -43,11 +46,39 @@ a.logo{
         font-size: 30px;
     }
 }
-
 legend{
     color: $contentText;
 }
+.buttons{
+    a{
+        float: left;
+        clear: left;
+        margin: 10px auto;
+    }
+}
+.undefeated, .winless{
+    display: block;
+    margin: 5px 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+div.content{
+    padding: 5px;
+    background-color: $contentBg;
+    color: $contentText;
+    border: 1px solid darken($contentBg, 30%);
+    border-radius: 4px;
+}
+#loading{
+    position: fixed;
+    top: 50%;
+    left: 48%;
+    padding: 15px 20px;
+    background: rgba(0,0,0,0.4);
+    border-radius: 5px;
+}
 
+/** Scorecard **/
 .scores{
     clear: both;
     .input{
@@ -57,7 +88,28 @@ legend{
 #score0, #score1{
     width: 30px;
 }
+#scorecard{
+    /*width: 520px;*/
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    @include cardBg;
+    table.result-table{
+        /*width: 500px;*/
+        margin: 10px;
+        td{
+            font-size: 16px;
+            padding: 10px;
+            text-align: center;
+        }
+        tr.scores td{
+            padding: 20px 10px;
+            font-size: 26px;
+            font-weight: bold;
+        }
+    }
+}
 
+/** Forms and Add match **/
 div.input{
     &.required label:after{
         content: "*";
@@ -96,50 +148,8 @@ label[for='MatchesPlayer2Score'],
     color: $teamBlue;
 }
 
-div.content{
-    padding: 5px;
-    background-color: $contentBg;
-    color: $contentText;
-    border: 1px solid darken($contentBg, 30%);
-    border-radius: 4px;
-}
 
-#scorecard{
-    /*width: 520px;*/
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    @include cardBg;
-    table.result-table{
-        /*width: 500px;*/
-        margin: 10px;
-        td{
-            font-size: 16px;
-            padding: 10px;
-            text-align: center;
-        }
-        tr.scores td{
-            padding: 20px 10px;
-            font-size: 26px;
-            font-weight: bold;
-        }
-    }
-}
-
-.buttons{
-    a{
-        float: left;
-        clear: left;
-        margin: 10px auto;
-    }
-}
-
-.undefeated, .winless{
-    display: block;
-    margin: 5px 0;
-    font-size: 24px;
-    font-weight: bold;
-}
-
+/** Tables **/
 #rankings{
     th{
         cursor: pointer;
