Relates to #28. Added an afterFind method to Player model to automatically lookup Facebook avatars and add them to the data array.

--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -195,7 +195,7 @@ table.comparison{
         margin: 0;
     }
 }
-.gravatar{
+.gravatar, .facebookavatar{
     margin-right: 10px;
 }
 td .gravatar{
