--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -209,6 +209,9 @@ td .gravatar{
 }
 
 /** Tournaments **/
+#draw{
+    margin: 10px 0;
+}
 div.tournament{
     .input.select{
         width: 220px;
@@ -222,5 +225,11 @@ div.tournament{
     .buttons{
         float: left;
         margin: 100px 10px 0;
+    }
+    .match{
+        margin: 10px;
+        padding: 10px;
+        background-color: darken($contentBg, 15%);
+        border-radius: 4px;
     }
 }
