--- a/app/webroot/sass/style.scss
+++ b/app/webroot/sass/style.scss
@@ -227,9 +227,20 @@ div.tournament{
         margin: 100px 10px 0;
     }
     .match{
+        width: 340px;
         margin: 10px;
         padding: 10px;
+        float: left;
         background-color: darken($contentBg, 15%);
         border-radius: 4px;
+        form{
+            margin-bottom: 0;
+        }
+        & div.input:first-child{
+            margin-right: 10px;
+        }
+        & input{
+            width: 100px;
+        }
     }
 }
